# small-shop

./: .gitignore  README.md  cargo.toml  prompt.txt  secrete.txt  small-shop.dump  small-shop.sql
backend/: .env.example  CODE_NOTES.md  Cargo.toml  README.md
backend/src/: config.rs  error.rs  lib.rs  main.rs  startup.rs  state.rs
backend/src/handlers/: mod.rs
backend/src/handlers/admin/: auth.rs  blog.rs  blog_review.rs  category.rs  coupon.rs  customer.rs  dashboard.rs  export.rs  mod.rs  notifications.rs  order.rs  permissions.rs  product.rs  review.rs  settings.rs  staff.rs  system_notification.rs
backend/src/handlers/client/: blog.rs  blog_comment.rs  mod.rs  (+10 more)
backend/src/middleware/: admin_guard.rs  auth.rs  mod.rs
backend/src/models/: admin.rs  blog.rs  blog_comment.rs  blog_review.rs  cart.rs  contact.rs  coupon.rs  mod.rs  notification.rs  order.rs  product.rs  review.rs  settings.rs  user.rs  wishlist.rs
backend/src/repositories/: admin_repo.rs  blog_comment_repo.rs  blog_repo.rs  blog_review_repo.rs  cart_repo.rs  contact_repo.rs  coupon_repo.rs  mod.rs  notification_repo.rs  order_repo.rs  product_repo.rs  review_repo.rs  settings_repo.rs  token_repo.rs  user_repo.rs  wishlist_repo.rs
backend/src/routes/: admin.rs  blog.rs  cart.rs  contact.rs  coupon.rs  health.rs  mod.rs  order.rs  product.rs  settings.rs  user.rs  wishlist.rs
backend/src/services/: admin_auth_service.rs  auth_service.rs  blog_comment_service.rs  blog_review_service.rs  blog_service.rs  cart_service.rs  cloudinary.rs  contact_service.rs  coupon_service.rs  dashboard_service.rs  email_service.rs  export_service.rs  link_preview_service.rs  local_storage.rs  media_storage.rs  mod.rs  notification_service.rs  order_service.rs  permissions_service.rs  product_service.rs  review_service.rs  settings_service.rs  staff_service.rs  token_service.rs  user_service.rs  wishlist_service.rs
backend/src/tests/: admin_auth_test.rs  config_runtime_test.rs  mod.rs  oauth_csrf_test.rs  startup_test.rs
(+316 files in other folders)
