[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
dotenv = "0.15.0"
lettre = "0.11.19"
serde_json = "1.0.107"
uuid = { version = "1.3.0", features = ["v4"] }
argon2 = "0.5.3"   

