[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]

# --- Web Framework ---
axum            = { version = "0.7", features = ["macros", "multipart"] }
tower           = "0.4"
tower-http      = { version = "0.5", features = ["cors", "trace", "fs", "request-id"] }
tokio           = { version = "1", features = ["full"] }

# --- Database ---
sqlx            = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# --- Serialization ---
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# --- Authentication & Security ---
argon2          = "0.5"
jsonwebtoken    = "9"
oauth2          = "4"
reqwest         = { version = "0.11", features = ["json", "multipart"] }
scraper         = "0.24"
sha1            = "0.10"

# --- Email ---
lettre          = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# --- Utilities ---
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
rand            = "0.8"
dotenvy         = "0.15"
thiserror       = "1"
validator       = { version = "0.18", features = ["derive"] }
urlencoding     = "2"

# --- Observability ---
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# --- Async utilities (SSE streams) ---
futures             = "0.3"
tokio-stream        = "0.1"
